users_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-svc
  labels:
    app: users-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: users-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - name: users-api
          image: ghcr.io/coopstools-homebrew/coopstools-homebrew/users_api:v0.0.3
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
            limits:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - containerPort: 8080
