users_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-app-svc
  namespace: prod
  labels:
    app: users-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: users-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
        - name: users-app
          image: ghcr.io/coopstools-homebrew/coopstools-homebrew/users_app:v0.1.0
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
            limits:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - containerPort: 80
